Updated data, fixed FF displaying the wrong height

--- a/stats.css
+++ b/stats.css
@@ -3,7 +3,6 @@ svg {
 }
 
 #content > svg {
-    height: 100%;
     width: 90%;
 }
 
